Fix profile picture getting too large in navbar

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -18,4 +18,7 @@
 .profile-pic {
     width: 2rem;
     border-radius: 50%;
+    height: 2rem;
+    object-fit: cover;
+    object-position: center;
 }
